correcciones ultima reunion

--- a/module/Empresas/view/empresas/empresas/index.phtml
+++ b/module/Empresas/view/empresas/empresas/index.phtml
@@ -28,7 +28,7 @@
  	<th>&nbsp;</th> 
      <th>Empresa</th>
      <th>Sucursal de</th>
-     <th>Email</th>
+     <th>Direcci&oacute;n</th>
      <th>Página Web</th>
         
  </tr>
@@ -49,7 +49,7 @@
 	 </td>
      <td><?php echo $this->escapeHtml($empresa->emp_nombre);?></td>
      <td><?php echo $this->escapeHtml($empresa->padre_nombre);?></td>
-     <td><?php echo $this->escapeHtml($empresa->emp_email);?></td>
+     <td><?php echo $this->escapeHtml($empresa->emp_direccion);?></td>
      <td><?php echo $this->escapeHtml($empresa->emp_pagina_web);?></td>
  </tr>
  <?php endforeach; ?>
