--- a/module/Cartas/view/cartas/cartas/validarpreview.phtml
+++ b/module/Cartas/view/cartas/cartas/validarpreview.phtml
@@ -42,7 +42,7 @@ $idioma = $this->data['CTR_IDIOMA'];
 	<table cellspacing="0" cellpadding="10" border="0" width="80%" align="center">
    		<tr>
         	<td colspan="2">
-        		<div>Quito D.M, <?php echo $funciones->translateAndFormatDate($this->data['CTR_FECHA_CREACION'], $idioma, 'd-M-Y')?></div>
+        		<div>Quito D.M, <?php echo $funciones->translateAndFormatDate($this->data['CTR_FECHA_CREACION'], $idioma, "d/m/y")?></div>
         		<div><?php //echo $this->carta->getCtr_codigo_final()?></div>
         	</td>
     	</tr>
@@ -155,7 +155,7 @@ $idioma = $this->data['CTR_IDIOMA'];
 <table cellspacing="0" cellpadding="10" border="0" width="80%" align="center">
     <tr>
         <td colspan="2">
-        	<div>Quito D.M, <?php echo $funciones->translateAndFormatDate($this->data['CTR_FECHA_CREACION'], $idioma, 'd-M-Y')?></div>
+        	<div>Quito D.M, <?php echo $funciones->translateAndFormatDate($this->data['CTR_FECHA_CREACION'], $idioma, 'd/m/y')?></div>
         	<div><?php //echo $this->carta->getCtr_codigo_final()?></div>
         </td>
     </tr>
@@ -292,7 +292,7 @@ $idioma = $this->data['CTR_IDIOMA'];
     				<tr><td colspan="2">&nbsp;</td></tr>
     				<tr>
     					<td>Fecha/Date:</td>
-    					<td><?php echo $funciones->translateAndFormatDate($this->data['CTR_FECHA_CREACION'], $idioma, 'd-M-Y')?></td>
+    					<td><?php echo $funciones->translateAndFormatDate($this->data['CTR_FECHA_CREACION'], $idioma, 'd/m/y')?></td>
     				</tr>
     			</table>
     		</td>
@@ -401,7 +401,7 @@ $idioma = $this->data['CTR_IDIOMA'];
     				<tr><td colspan="2">&nbsp;</td></tr>
     				<tr>
     					<td>Fecha/Date:</td>
-    					<td><?php echo $funciones->translateAndFormatDate($this->data['CTR_FECHA_CREACION'], $idioma, 'd-M-Y')?></td>
+    					<td><?php echo $funciones->translateAndFormatDate($this->data['CTR_FECHA_CREACION'], $idioma, 'd/m/y')?></td>
     				</tr>
     			</table>
     		</td>
@@ -528,7 +528,7 @@ $idioma = $this->data['CTR_IDIOMA'];
 <table cellspacing="0" cellpadding="10" border="0" width="80%" align="center">
     <tr>
         <td colspan="2">
-        	<div>Quito D.M, <?php echo $funciones->translateAndFormatDate($this->data['CTR_FECHA_CREACION'], $idioma, 'd-M-Y')?></div>
+        	<div>Quito D.M, <?php echo $funciones->translateAndFormatDate($this->data['CTR_FECHA_CREACION'], $idioma, 'd/m/y')?></div>
         	<div><?php //echo $this->carta->getCtr_codigo_final()?></div>
         </td>
     </tr>
