--- a/module/Cartas/view/cartas/cartas/ingresar.phtml
+++ b/module/Cartas/view/cartas/cartas/ingresar.phtml
@@ -768,6 +768,20 @@ CKEDITOR.replace( 'CTR_CUERPO', {
 		]
 } );
 
+CKEDITOR.replace( 'CTR_COPIA', {
+	enterMode : CKEDITOR.ENTER_BR,
+	toolbar :
+		[
+			{ name: 'clipboard', items : [ 'Cut','Copy','Paste','PasteText','PasteFromWord','-','Undo','Redo' ] },
+			//{ name: 'editing', items : [ 'Find','Replace','-','SelectAll','-','Scayt' ] },
+			{ name: 'insert', items : [ 'Table','Smiley' ] },
+			//{ name: 'styles', items : [ 'Styles','Format' ] },
+			{ name: 'basicstyles', items : [ 'Bold','Italic','Underline','-','RemoveFormat' ] },
+			{ name: 'paragraph', items : [ 'NumberedList','BulletedList','-','Outdent','Indent','-','Blockquote', '-','JustifyLeft','JustifyCenter','JustifyRight','JustifyBlock' ] },
+			//{ name: 'links', items : [ 'Link','Unlink'] },
+		]
+} );
+
 CKEDITOR.replace( 'CTR_ANEXOS', {
 	enterMode : CKEDITOR.ENTER_BR,
 	toolbar :
